Finished HTML stuff for now

--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <link href = "style.css" rel = "stlyesheet">
 </head>
 <body>
-Content goes here.
+    <div class = "head">
+        <h1>Drew's Awesome Website</h1>
+    </div>
+    <div class = "main">
+        <div class = "content">
+            <h3>What goes here will matter a lot more in the future!</h3>
+        </div>
+        <div class = "image">
+            <img src = "./4419A6F4-45FE-435A-9724-38D98DF0E76E_1_105_c.jpeg" alt = "My GF and I in Bemidji">
+        </div>
+        <div class = "list1">
+            <h4>Things we did in and around Bemidji:</h4>
+            <ul>
+                <li>Camp in a camper van</li>
+                <li>Visited downtown</li>
+                <li>Went to the co-op</li>
+                <li>Had a lot of really good food</li>
+            </ul>
+        </div>
+        <div class = "video">
+            <h4>Here's a funny video about things you can do in Bemidji!</h4>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/v66Get0lT0Y"></iframe>   
+        </div>
+    </div>
+    <div class = "footer">
+        <h5>I'll be adding more to this in the future!</h5>
+    </div>
 </body>
 </html>
