Finished with assignment

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <title>Practice Using Codecademy Concepts</title>
-    <link href = "style.css" rel = "stlyesheet">
+    <link rel = "stylesheet" href = "style.css"/>
 </head>
 <body>
-    <div class = "head">
+    <div class = "header">
         <h1>Drew's Awesome Website</h1>
     </div>
     <div class = "main">
         <div class = "content">
             <h3>What goes here will matter a lot more in the future!</h3>
         </div>
-        <div class = "image">
-            <img src = "./4419A6F4-45FE-435A-9724-38D98DF0E76E_1_105_c.jpeg" alt = "My GF and I in Bemidji">
-        </div>
+        <img src = "./4419A6F4-45FE-435A-9724-38D98DF0E76E_1_105_c.jpeg" alt = "My GF and I in Bemidji">
+        
         <div class = "list1">
             <h4>Things we did in and around Bemidji:</h4>
             <ul>
